--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="product.html ">Products</a>
         <a href="checkout.html">Checkout</a>
         <a href="catalog.html">Catalog</a>
+        <a href="login.html">Login</a>
+        
     </nav>
     <main>
         <h2>Freshness Delivered to Your Doorstep</h2>
@@ -26,5 +28,6 @@
     </footer>
 </body>
 </html> 
+
 
 
