--- a/catalog.html
+++ b/catalog.html
@@ -13,6 +13,7 @@
   <a href="index.html">Home</a>
   <a href="products.html">Catalog</a>
   <a href="payment.html">Payment</a>
+  <a href="login.html">Login</a>
 </div>
 
 <div class="main-content">
@@ -32,4 +33,5 @@
 </footer>
 
 </body>
+
 </html>
