--- a/product.html
+++ b/product.html
@@ -13,6 +13,7 @@
         <a href="products.html">Products</a>
         <a href="checkout.html">Checkout</a>
         <a href="catalog.html">Catalog</a>
+        <a href="login.html">Login</a>
     </nav>
 </header>
 
@@ -97,3 +98,4 @@
 </footer>
 </body>
 </html>
+
